--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 GreenButtonTestingRequirements/GenBadData
 GreenButtonTestingRequirements/GeneratedTests
 GreenButtonTestingRequirements/OnDemandResults
+GreenButtonTestingRequirements/TestResults
+GreenButtonTestingRequirements/TestData/*_BAD.xml
